# promptctl

./: .gitignore  Cargo.toml  README.md
.github/: copilot-instructions.md
.github/instructions/: promptctl-rust.instructions.md
.github/workflows/: release.yml
src/: agents.rs  cli.rs  clipboard.rs  config.rs  indexer.rs  main.rs  presets.rs  prompt_builder.rs  roles.rs
src/prompts/: go.rs  leo.rs  mod.rs  rust.rs  solidity.rs  typescript.rs
