[package]
name = "promptctl"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "A personal CLI tool for managing coding prompts across projects"
authors = ["Debendra Oli"]
license = "MIT"

[[bin]]
name = "promptctl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
arboard = "3.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
colored = "2.1"
thiserror = "2.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
